--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: programa1           # set this to your Amazon ECR repository name
   ECS_SERVICE: servico-programa1                 # set this to your Amazon ECS service name
   ECS_CLUSTER: ec2                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: task_definition.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: programa1.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: programa1           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
